--- a/srmgpc/templates/about.html
+++ b/srmgpc/templates/about.html
@@ -34,17 +34,17 @@
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
                         <img src="{% static 'pooja_mam.png' %}" alt="" class="img-10">
                         <p class="text-20">Er. Pooja Agarwal</p>
-                        <p class="text-25">Dean</p>
+                        <p class="text-25">Executive Director</p>
                     </div>
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
                         <img src="{% static 'pankaj_sir.png' %}" alt="" class="img-10">
                         <p class="text-20">Mr. Pankaj Agarwal</p>
-                        <p class="text-25">Executive Director</p>
+                        <p class="text-25">Additional Executive Director</p>
                     </div>
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
                         <img src="{% static 'bhavesh_sir.jpg' %}" alt="" class="img-10">
                         <p class="text-20 text-center">Prof.(Dr.) Bhavesh Kr. Chauhan</p>
-                        <p class="text-25">Director General</p>
+                        <p class="text-25">Group Director</p>
                     </div>
                 </div>
             </div>
