--- a/srmgpc/templates/event/newspaper.html
+++ b/srmgpc/templates/event/newspaper.html
@@ -30,7 +30,7 @@
             <div class="row">
                 <div class="col-md-4 d-flex justify-content-center">
                     <div class="box-11 d-flex flex-column">
-                        <img src="{% static 'selfie.jpg' %}" alt="" class="img-11 img-fluid">
+                        <img src="{% static 'ypia.jpg' %}" alt="" class="img-11 img-fluid">
                         <h3 class="text-12 text-center py-2">You Peek I Answer</h3>
                         <div class="box-12 overflow-box1">
 
@@ -65,7 +65,7 @@
                 </div>
                 <div class="col-md-4 d-flex justify-content-center">
                     <div class="box-11 d-flex flex-column">
-                        <img src="{% static 'photofilm.jpg' %}" alt="" class="img-11 img-fluid">
+                        <img src="{% static 'funquiz.jpg' %}" alt="" class="img-11 img-fluid">
                         <h3 class="text-12 text-center py-2">Fun Quiz</h3>
                         <div class="box-12 overflow-box2">
                             <p class="text-13 px-2 pb-1">Rules:</p>
