--- a/srmgpc/templates/email/signupMail.html
+++ b/srmgpc/templates/email/signupMail.html
@@ -1,7 +1,7 @@
 <body>
     <p>Hello <strong>{{ user }}</strong>,</p>
 
-    <p>Welcome to <i><strong>Abhivyakti'22</strong></i>, the cultural fest of <strong>SRMCEM!</strong> You are now successfully registered for Abhivyakti on our official website.<br><br>Now it's time for you to showcase your unique talents to the world and stand out in a crowd. You can register yourself in any category of Events on our website.<br><br>We hope you enjoy to the fullest and wish you all the luck and happiness.<br><br><strong><i>Please find attached : Brochure of Abhivyakti 2k22</i></strong><br><br>In case you have any query, you can connect with us at:<br>Phone: <strong></strong><br>Email: <strong>abhivyaktisrmgpc@gmail.com</strong></p><br>
+    <p>Welcome to <i><strong>Abhivyakti'22</strong></i>, the cultural fest of <strong>SRMCEM!</strong> You are now successfully registered for Abhivyakti on our official website.<br><br>Now it's time for you to showcase your unique talents to the world and stand out in a crowd. You can register yourself in any category of Events on our website.<br><br>We hope you enjoy to the fullest and wish you all the luck and happiness.<br><br><strong><i>Please find attached : Brochure of Abhivyakti 2k22</i></strong><br><br>In case you have any query, you can connect with us at:<br>Phone: <strong><a href="tel:9506204880">9506204880</a></strong> (Ram Singh Yadav)<br>Email: <strong>abhivyaktisrmgpc@gmail.com</strong></p><br>
 
     <p>Regards,<br /><strong>Team Abhivyakti'22</strong><br><strong>SRMCEM, Lucknow</strong></p>
 </body>
