--- a/srmgpc/templates/event/literati.html
+++ b/srmgpc/templates/event/literati.html
@@ -31,7 +31,7 @@
             <div class="row">
                 <div class="col-md-4 d-flex justify-content-center">
                     <div class="box-11 d-flex flex-column">
-                        <img src="{% static 'musicalchair.jpg' %}" alt="" class="img-11 img-fluid">
+                        <img src="{% static 'graffiti.jpg' %}" alt="" class="img-11 img-fluid">
                         <h3 class="text-12 text-center py-2">Graffiti</h3>
                         <div class="box-12 overflow-box1">
 
@@ -66,7 +66,7 @@
                 </div>
                 <div class="col-md-4 d-flex justify-content-center">
                     <div class="box-11 d-flex flex-column">
-                        <img src="{% static 'tugofwar.jpg' %}" alt="" class="img-11 img-fluid">
+                        <img src="{% static 'gd.jpg' %}" alt="" class="img-11 img-fluid">
                         <h3 class="text-12 text-center py-2">Group Discussion</h3>
                         <div class="box-12 overflow-box2">
                             <p class="text-13 px-2 pb-1">Rules:</p>
@@ -100,7 +100,7 @@
 
                 <div class="col-md-4 d-flex justify-content-center">
                     <div class="box-11 d-flex flex-column">
-                        <img src="{% static 'housie.png' %}" alt="" class="img-11 img-fluid">
+                        <img src="{% static 'debate.jpg' %}" alt="" class="img-11 img-fluid">
                         <h3 class="text-12 text-center py-2">Debate</h3>
                         <div class="box-12 overflow-box3">
                             <p class="text-13 px-2 pb-1">Rules:</p>
@@ -134,7 +134,7 @@
 
                 <div class="col-md-4 d-flex justify-content-center box-4">
                     <div class="box-11 d-flex flex-column">
-                        <img src="{% static 'khokho.jpg' %}" alt="" class="img-11 img-fluid">
+                        <img src="{% static 'meme.jpg' %}" alt="" class="img-11 img-fluid">
                         <p class="text-12 text-12-ex text-center py-2">Maymay Mania</p>
                         <div class="box-12 overflow-box4">
                             <p class="text-13 px-2 pb-1">Rules:</p>
@@ -168,7 +168,7 @@
 
                 <div class="col-md-4 d-flex justify-content-center box-4">
                     <div class="box-11 d-flex flex-column">
-                        <img src="{% static 'cricket.jpg' %}" alt="" class="img-11 img-fluid">
+                        <img src="{% static 'trivia_fever.jpg' %}" alt="" class="img-11 img-fluid">
                         <h3 class="text-12 text-center py-2">Trivia Fever</h3>
                         <div class="box-12 overflow-box5">
                             <p class="text-13 px-2 pb-1">Rules:</p>
@@ -268,7 +268,7 @@
                 </div>
                 <div class="col-md-4 d-flex justify-content-center box-4">
                     <div class="box-11 d-flex flex-column">
-                        <img src="{% static 'chess.jpg' %}" alt="" class="img-11 img-fluid">
+                        <img src="{% static 'twistandtale.jpg' %}" alt="" class="img-11 img-fluid">
                         <h3 class="text-12 text-center py-2">Twist & Tale</h3>
                         <div class="box-12 overflow-box6">
                             <p class="text-13 px-2 pb-1">Rules:</p>
@@ -301,7 +301,7 @@
                 </div>
                 <div class="col-md-4 d-flex justify-content-center box-4">
                     <div class="box-11 d-flex flex-column">
-                        <img src="{% static 'lemonrace.jpg' %}" alt="" class="img-11 img-fluid">
+                        <img src="{% static 'open_mic.jpg' %}" alt="" class="img-11 img-fluid">
                         <h3 class="text-12 text-center py-2">Open Mic</h3>
                         <div class="box-12 overflow-box6">
                             <p class="text-13 px-2 pb-1">Rules:</p>
@@ -334,7 +334,7 @@
                 </div>
                 <div class="col-md-4 d-flex justify-content-center box-4">
                     <div class="box-11 d-flex flex-column">
-                        <img src="{% static 'sackrace.jpg' %}" alt="" class="img-11 img-fluid">
+                        <img src="{% static 'readerscircle.jpg' %}" alt="" class="img-11 img-fluid">
                         <h3 class="text-12 text-center py-2">Reader's Circle</h3>
                         <div class="box-12 overflow-box6">
                             <p class="text-13 px-2 pb-1">Rules:</p>
@@ -367,7 +367,7 @@
                 </div>
                 <div class="col-md-4 d-flex justify-content-center box-4">
                     <div class="box-11 d-flex flex-column">
-                        <img src="{% static 'susd.png' %}" alt="" class="img-11 img-fluid">
+                        <img src="{% static 'scripturesqueue.jpg' %}" alt="" class="img-11 img-fluid">
                         <h3 class="text-12 text-center py-2">Scripturesqueue</h3>
                         <div class="box-12 overflow-box6">
                             <p class="text-13 px-2 pb-1">Rules:</p>
@@ -400,7 +400,7 @@
                 </div>
                 <div class="col-md-4 d-flex justify-content-center box-4">
                     <div class="box-11 d-flex flex-column">
-                        <img src="{% static 'tlr.png' %}" alt="" class="img-11 img-fluid">
+                        <img src="{% static 'jam.jpg' %}" alt="" class="img-11 img-fluid">
                         <h3 class="text-12 text-center py-2">JAM</h3>
                         <div class="box-12 overflow-box6">
                             <p class="text-13 px-2 pb-1">Rules:</p>
@@ -437,7 +437,7 @@
 
                 <div class="col-md-4 d-flex justify-content-center box-4">
                     <div class="box-11 d-flex flex-column">
-                        <img src="{% static 'tlr.png' %}" alt="" class="img-11 img-fluid">
+                        <img src="{% static 'doodlerscombat.jpg' %}" alt="" class="img-11 img-fluid">
                         <h3 class="text-12 text-center py-2">Doodler's Combat</h3>
                         <div class="box-12 overflow-box6">
                             <p class="text-13 px-2 pb-1">Rules:</p>
