make changes in about and developers and static

--- a/srmgpc/templates/about.html
+++ b/srmgpc/templates/about.html
@@ -42,7 +42,7 @@
                         <p class="text-25">Additional Executive Director</p>
                     </div>
                     <div class="col-md-4 d-flex flex-column align-items-center justify-content-center">
-                        <img src="{% static 'bhavesh_sir.jpg' %}" alt="" class="img-10">
+                        <img src="{% static 'bhavesh_sir.jpeg' %}" alt="" class="img-10">
                         <p class="text-20 text-center">Prof.(Dr.) Bhavesh Kr. Chauhan</p>
                         <p class="text-25">Group Director</p>
                     </div>
@@ -51,10 +51,11 @@
         </div>
 
         <div class="main-20 container">
-            <p class="text-201 text-center">Our Previous Sponsors</p>
-            <div class="container d-flex justify-content-center">
-
-                <img src="{% static 'sponsors.gif' %}" alt="" class="img-fluid img-201">
+            <p class="text-201 text-center">Our Sponsors</p>
+            <div class="container d-flex flex-column align-items-center justify-content-center">
+                <img src="{% static 'ieee.jpeg' %}" alt="" class="img-fluid shadow my-2">
+                <img src="{% static 'iic.jpeg' %}" alt="" class="img-fluid shadow my-2">
+                <img src="{% static 'sponsors.gif' %}" alt="" class="img-fluid shadow img-201 my-2">
             </div>
         </div>
 
