--- a/srmgpc/templates/developers.html
+++ b/srmgpc/templates/developers.html
@@ -62,7 +62,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="container d-flex flex-column box-2 p-4">
                         <div class="p-3 d-flex justify-content-center">
-                            <img src="{% static 'developers/sahu.JPG' %}" alt="" class="img-1">
+                            <img src="{% static 'developers/sahu.jpg' %}" alt="" class="img-1">
                         </div>
                         <div class="container px-0 mt-3">
                             <h3 class="text-2 fw-bold text-center">SHASHANK SAHU</h3>
